# secretX

./: .gitignore  README.md  env.example  package.json  tsconfig.json
docs/: HIDDEN_MESSAGE.md  LORE.md  SUCCESS_STORY.md  WHITEPAPER.md  pump-fun-listing.md
program/: Cargo.toml
program/src/: lib.rs
scripts/: create-token.ts  mint.ts  pump-fun-listing.ts
