[package]
name = "codelonx-token"
version = "1.0.0"
edition = "2021"
description = "CodelonX Token for $secretX platform"
license = "MIT"

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.43"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[profile.release]
overflow-checks = true 